docs: create user docs
