# internal/infra/webserver/handlers/user_handlers.go
@@ -11,6 +11,10 @@ import (
 	"github.com/go-chi/jwtauth"
 )
 
+type Error struct {
+	Message string `json:"message"`
+}
+
 type UserHandler struct {
 	GormUserRepository database.UserRepository
 }
@@ -53,6 +57,16 @@ func (h *UserHandler) Login(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(accessToken)
 }
 
+// Create user godoc
+// @Summary      Create user
+// @Description  Create user
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        request     body      dto.CreateUserInput  true  "user request"
+// @Success      201
+// @Failure      500         {object}  Error
+// @Router       /users [post]
 func (h *UserHandler) CreateUser(w http.ResponseWriter, r *http.Request) {
 	var user dto.CreateUserInput
 
@@ -60,18 +74,30 @@ func (h *UserHandler) CreateUser(w http.ResponseWriter, r *http.Request) {
 
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
+
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
+
 		return
 	}
 
 	u, err := entity.NewUser(user.Name, user.Email, user.Password)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
+
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
+
 		return
 	}
 
 	err = h.GormUserRepository.Create(u)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
+
 		return
 	}
 	w.WriteHeader(http.StatusCreated)
